# ChangeLog for virtual/jre
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/jre/ChangeLog,v 1.26 2010/01/11 11:03:47 ulm Exp $

  11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> jre-1.4.1.ebuild,
  jre-1.4.2.ebuild, jre-1.5.0.ebuild, jre-1.6.0.ebuild:
  Set empty HOMEPAGE and LICENSE.

  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> jre-1.4.2.ebuild,
  jre-1.5.0.ebuild, jre-1.6.0.ebuild:
  QA: Add prefix keywords

  05 Jul 2009; Alistair Bush <ali_bush@gentoo.org> jre-1.6.0.ebuild:
  Keyword ~x86-fbsd and add diablo-jre-bin

  22 May 2008; Markus Rothe <corsair@gentoo.org> jre-1.6.0.ebuild:
  Stable on ppc64

  12 May 2008; nixnut <nixnut@gentoo.org> jre-1.6.0.ebuild:
  Stable on ppc wrt bug 219657

  18 Jan 2008; Brent Baude <ranger@gentoo.org> jre-1.6.0.ebuild:
  Marking jre-1.6.0 ~ppc64 for bug 166789

  24 Dec 2007; nixnut <nixnut@gentoo.org> jre-1.6.0.ebuild:
  Added ~ppc wrt bug 166789

  16 Dec 2007; Vlastimil Babka <caster@gentoo.org> jre-1.6.0.ebuild:
  Add ibm-jre-bin-1.6 as an alternative.

  25 Jun 2007; Christoph Mende <angelos@gentoo.org> jre-1.6.0.ebuild:
  Stable on amd64 wrt bug 177842

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jre-1.6.0.ebuild:
  stable x86, bug 177842

*jre-1.6.0 (14 Dec 2006)

  14 Dec 2006; Vlastimil Babka <caster@gentoo.org> +jre-1.6.0.ebuild:
  Version bump for 1.6 JRE.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> jre-1.5.0.ebuild:
  ppc stable. bug #147254

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jre-1.5.0.ebuild:
  Stabilizing on ia64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jre-1.5.0.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> jre-1.5.0.ebuild:
  Stabilizing on ppc64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Jackson <tsunam@gentoo.org> jre-1.5.0.ebuild: