@@ -1,6 +1,9 @@
 # ChangeLog for virtual/jre
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/jre/ChangeLog,v 1.26 2010/01/11 11:03:47 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/jre/ChangeLog,v 1.27 2010/02/05 09:45:24 aballier Exp $
+
+  05 Feb 2010; Alexis Ballier <aballier@gentoo.org> jre-1.5.0.ebuild:
+  remove diablo-jre 1.5 support as it is for freebsd6 only
 
   11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> jre-1.4.1.ebuild,
   jre-1.4.2.ebuild, jre-1.5.0.ebuild, jre-1.6.0.ebuild:
